# relearning_opengl

./: LICENCE.md  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
learnopengl.com/: CMakeLists.txt
learnopengl.com/01_hello_window/: CMakeLists.txt
learnopengl.com/01_hello_window/src/: hello_window.cpp
learnopengl.com/02_hello_triangle/: CMakeLists.txt
learnopengl.com/03_shaders/: CMakeLists.txt
learnopengl.com/03_shaders/src/: shader.fs  shader.vs  shaders.cpp
learnopengl.com/04_textures/: CMakeLists.txt
learnopengl.com/04_textures/src/: shader.fs  shader.vs  textures.cpp
learnopengl.com/05_transformations/: CMakeLists.txt
learnopengl.com/05_transformations/src/: shader.vs  transforms.cpp
learnopengl.com/06_coord_systems/: CMakeLists.txt
learnopengl.com/06_coord_systems/src/: coord_systems.cpp  shader.fs  shader.vs
learnopengl.com/07_camera/: CMakeLists.txt
learnopengl.com/07_camera/src/: camera.cpp
learnopengl.com/08_colours/: CMakeLists.txt
learnopengl.com/08_colours/src/: colours.cpp  shader.fs
learnopengl.com/09_basic_lighting/: CMakeLists.txt
learnopengl.com/09_basic_lighting/src/: basic_lighting.cpp  shader.fs  shader.vs  shader_cube.fs
learnopengl.com/hello_triangle/: CMakeLists.txt
learnopengl.com/hello_triangle/src/: hello_triangle.cpp
learnopengl.com/hello_window/: CMakeLists.txt
learnopengl.com/hello_window/src/: hello_window.cpp
utils/include/utils/: camera.hpp  shader.hpp
utils/src/: shader.cpp
