cmake_minimum_required(VERSION 3.0.0)

project(learnopengl.com VERSION 0.1.0)

add_subdirectory(01_hello_window)
add_subdirectory(02_hello_triangle)
add_subdirectory(03_shaders)
add_subdirectory(04_textures)
add_subdirectory(05_transformations)
add_subdirectory(06_coord_systems)
add_subdirectory(07_camera)
add_subdirectory(08_colours)
add_subdirectory(09_basic_lighting)